# schedules-direct-rs

./:  LICENSE-MIT   .env  .gitignore  Cargo.toml  LICENSE-Apache2.0  README.md
examples/: bad_lineups.rs  lineup_test.rs  sample.rs
migrations/2021-01-31-193148_create_database/: down.sql  up.sql
src/: lib.rs  models.rs  schedules_direct.rs  schema.rs
