[package]
name = "schedules_direct"
version = "0.1.0"
authors = ["Joel Winarske <joel.winarske@linux.com>"]
edition = "2018"
repository = "git@github.com:jwinarske/schedules-direct-rs.git"
homepage = "https://github.com/jwinarske/schedules-direct-rs"
description = "Library to interact with Schedules Direct API"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
dotenv = "0.10"
diesel = { version = "1.4", features = ["sqlite"] }
tokio = { package = "tokio", version = "1.12", features = ["time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
backoff = { version = "0.3", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2"
chrono = "0.4"

[dev-dependencies]
pretty_env_logger = "^0.4"
csv = "1.1"
serde_derive = "1.0"
rand = "0.8"
futures = "0.3"

[[example]]
name = "sample"
path = "examples/sample.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'